feat: add initial Control Player with Gun

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -13,7 +13,9 @@
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
     "@types/three": "^0.172.0",
+    "leva": "^0.10.0",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "three": "^0.172.0"
   },
