--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
+    "@react-three/rapier": "^1.5.0",
     "@types/three": "^0.172.0",
+    "gsap": "^3.12.7",
+    "jotai": "^2.11.1",
     "leva": "^0.10.0",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
