--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
+    "@react-three/postprocessing": "^2.19.1",
     "@react-three/rapier": "^1.5.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/three": "^0.172.0",
     "gsap": "^3.12.7",
     "jotai": "^2.11.1",
@@ -20,6 +22,7 @@
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^4.0.0",
     "three": "^0.172.0"
   },
   "devDependencies": {
