--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@tailwindcss/vite": "^4.0.0",
     "@types/three": "^0.172.0",
     "gsap": "^3.12.7",
+    "howler": "^2.2.4",
     "jotai": "^2.11.1",
     "leva": "^0.10.0",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-howler": "^5.2.0",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^4.0.0",
     "three": "^0.172.0"
   },
